Separate memory allocation concerns

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,6 @@ MY_SOURCES             = \
                                 globalexit.c \
                                 init.c \
                                 lock.c \
-                                memalloc.c \
                                 ptr.c \
                                 put.c \
                                 quiet.c \
@@ -40,7 +39,10 @@ MY_SOURCES             = \
                                 version.c \
                                 waituntil.c
 
-liballocator_a_SOURCES = dlmalloc.c
+#
+# separate out the memory allocation routines
+#
+liballocator_a_SOURCES = dlmalloc.c memalloc.c
 liballocator_a_CFLAGS  = -DONLY_MSPACES=1 -DHAVE_MORECORE=0 -DHAVE_MMAP=0 -DUSE_LOCKS=1
 liballocator_la_SOURCES = $(liballocator_a_SOURCES)
 liballocator_la_CFLAGS  = $(liballocator_a_CFLAGS)
