Checkpoint: we are now allocating and freeing internal structures to manage context creation/destruction.  Need to work current implicit default context worker into this structure so that the "old" behavior continures to work but with more workers around.

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -8,6 +8,7 @@ LIBSHMEMC_SOURCES         = \
 				barrier.c \
 				broadcast.c \
 				comms.c \
+				contexts.c \
 				globalexit.c \
 				mcs-lock.c \
 				pmix-client.c \
