--- a/man/man1/osh_intro.1.in
+++ b/man/man1/osh_intro.1.in
@@ -7,19 +7,19 @@ OpenSHMEM is a PGAS programming library that can use
 hardware capabilities such as RDMA for fast direct-to-memory
 communication.
 .LP
-This manual page documents the commands associated with this
-implementation.
+This manual page documents the commands associated with the Open
+Source Software Solutions (OSSS) Reference Implementation.
 .LP
 .SH TOOLS
 .IP COMPILERS
 .RS 2
-.IP C 4
+.IP "C" 8
 This is the core interface that is always present.
 C programs can be compiled/linked using oshcc(1).
-.IP C++ 4
+.IP "C++" 8
 If this interface has been enabled, C++ programs can be
 compiled/linked using oshcxx(1).
-.IP Fortran 4
+.IP "Fortran" 8
 If this interface has been enabled, Fortran programs can be
 compiled/linked using oshfort(1).
 .RE
@@ -34,6 +34,10 @@ aprun in ALPS).
 .IP osh_info 4
 A utility that describes configuration settings of this
 implementation, osh_info(1).
+.SH ENVIRONMENT
+.IP "pkg-config osss-ucx"
+If configured in the user's environment, this implementation can be
+queried by pkg-config(1).
 .SH SEE ALSO
 oshcc(1),
 .br
