Make sure dlmalloc does the right thing with realloc(0)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,7 +43,12 @@ MY_SOURCES             = \
 # separate out the memory allocation routines
 #
 liballocator_a_SOURCES = dlmalloc.c memalloc.c
-liballocator_a_CFLAGS  = -DONLY_MSPACES=1 -DHAVE_MORECORE=0 -DHAVE_MMAP=0 -DUSE_LOCKS=1
+liballocator_a_CFLAGS  = \
+			-DONLY_MSPACES=1 \
+			-DHAVE_MORECORE=0 \
+			-DHAVE_MMAP=0 \
+			-DUSE_LOCKS=1 \
+			-DREALLOC_ZERO_BYTES_FREES=1
 liballocator_la_SOURCES = $(liballocator_a_SOURCES)
 liballocator_la_CFLAGS  = $(liballocator_a_CFLAGS)
 noinst_LIBRARIES       = liballocator.a
