--- a/src/shmemu/Makefile.am
+++ b/src/shmemu/Makefile.am
@@ -4,8 +4,10 @@ OTHER_CPPFLAGS            = -I../../include \
 				-I$(srcdir)/../shmemc \
 				-I$(srcdir)/uthash
 LIBSHMEMU_SOURCES         = hostname.c fatal.c logger.c timer.c unitparse.c \
-				shmemu-init.c miscops.c deprecate.c \
-				round.c
+				shmemu-init.c miscops.c round.c
+if ENABLE_DEBUG
+LIBSHMEMU_SOURCES        += deprecate.c
+endif
 
 lib_LIBRARIES             = libshmemu.a
 libshmemu_a_SOURCES       = $(LIBSHMEMU_SOURCES)
