--- a/src/shmemc/oshfort.in
+++ b/src/shmemc/oshfort.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # For license: see LICENSE file at top-level
 
-compiler="${OSH_FC-@FC@}"
+compiler="${OSH_FC-gfortran}"
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
