--- a/man/man1/oshrun.1.in
+++ b/man/man1/oshrun.1.in
@@ -22,6 +22,24 @@ processing elements.
 Run the program on N processing elements (PEs or processors).
 Overrides any PE count inherited from launch environment.
 .LP
+.SH ENVIRONMENT
+OpenSHMEM environment variables are prefixed with "SHMEM_".  Some
+older SHMEM implementations had variables prefixed with "SMA_": these
+are still supported in OpenSHMEM, but dare eprecated.  If both are set
+for a given variable, the "SHMEM_" one will be used.
+.LP
+Boolean flags are enabled with a non-zero value, or "y", "yes";
+disabled with zero value, or "n", "no".
+.IP "SHMEM_VERSION (bool)"
+print library version at start-up
+.IP "SHMEM_INFO (bool)"
+print information about supported environment variables
+.IP "SHMEM_SYMMETRIC_SIZE (number)"
+set the size of the symmetric heap.  Can use K,M,G,T units
+.IP "SHMEM_DEBUG (bool)"
+enable run debugging (if configured).
+.IP "SHMEM_DEBUG_FILE (string)"
+file to receive debugging information.
 .SH EXAMPLES
 The command
 .LP
@@ -33,9 +51,10 @@ runs the Quadrics ping-pong example code on 4 processing elements, and
 passes the arguments "-e" and "8192" through to the OpenSHMEM program.
 .SH NOTES
 .LP
-The OpenSHMEM specification does not say anything about how OpenSHMEM
-programs are compiled, linked and launched.  These wrapper programs
-are supplied as part of the Reference Library for convenience.
+The OpenSHMEM specification does not say anything normative about how
+OpenSHMEM programs are compiled, linked and launched.  These wrapper
+programs are supplied as part of the Reference Library for
+convenience.
 .SH SEE ALSO
 osh_intro(1).
 .SH OPENSHMEM
