--- a/include/shmem/defs.h.in
+++ b/include/shmem/defs.h.in
@@ -77,14 +77,14 @@ enum shmem_fortran_errors {
     SHMEM_MALLOC_SYMMSIZE_FAILED     = (-10L)
 };
 
-typedef enum shmem_cmp_constants {
+enum shmem_cmp_constants {
     SHMEM_CMP_EQ = 0,
     SHMEM_CMP_NE,
     SHMEM_CMP_GT,
     SHMEM_CMP_LE,
     SHMEM_CMP_LT,
     SHMEM_CMP_GE
-} shmem_cmp_t;
+};
 
 /*
  * array sizes for collectives
