put deprecated Fortran cache routines in their own source file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,7 +56,9 @@ noinst_LIBRARIES       = liballocator.a
 noinst_LTLIBRARIES     = liballocator.la
 
 if ENABLE_FORTRAN
-MY_SOURCES            += fortran/fortran.c fortran/fortran-mem.c
+MY_SOURCES            += fortran/fortran.c
+MY_SOURCES            += fortran/fortran-mem.c
+MY_SOURCES            += fortran/fortran-cache.c
 endif # fortran
 
 if ENABLE_EXPERIMENTAL
