--- a/pkgconfig/osss-ucx.pc.in
+++ b/pkgconfig/osss-ucx.pc.in
@@ -8,7 +8,7 @@ URL: @PACKAGE_URL@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 #
-Libs: -L@libdir@ -lshmem -lshmemc-ucx -lshmemu @PMIX_LIBS@
+Libs: -L@libdir@ -lshmem -lshmemc-ucx -lshmemu @PMIX_LIBS@ @UCX_LIBS@
 Cflags: -I@includedir@
 #
 Provides: @PACKAGE@
